<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NovoSeriadoActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imgNovoSeriado"
            android:layout_width="384dp"
            android:layout_height="250dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/fotoSeriado"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fAddSeriado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.975"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_photo_24dp" />

        <EditText
            android:id="@+id/etNomeSeriado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/nomeSeriado"
            android:inputType="textPersonName"
            android:text="Nome Seriado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgSeriado"
            app:layout_constraintTop_toBottomOf="@+id/imgNovoSeriado" />

        <EditText
            android:id="@+id/etAnoLancamento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/anoLancamento"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgAno"
            app:layout_constraintTop_toBottomOf="@+id/etNomeSeriado" />

        <ImageView
            android:id="@+id/imgSeriado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/imgSeriado"
            app:layout_constraintEnd_toStartOf="@+id/etNomeSeriado"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgNovoSeriado"
            tools:srcCompat="@drawable/ic_local_movies_24dp" />

        <ImageView
            android:id="@+id/imgAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/anoLancamento"
            app:layout_constraintEnd_toStartOf="@+id/etAnoLancamento"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etAnoLancamento"
            tools:srcCompat="@drawable/ic_date_24dp" />

        <EditText
            android:id="@+id/etEpisodio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/episodio"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgEpisodio"
            app:layout_constraintTop_toBottomOf="@+id/etAnoLancamento" />

        <ImageView
            android:id="@+id/imgEpisodio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/episodio"
            app:layout_constraintEnd_toStartOf="@+id/etEpisodio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etEpisodio"
            tools:srcCompat="@drawable/ic_episodio_24dp" />

        <Spinner
            android:id="@+id/spGenero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgGenero"
            app:layout_constraintTop_toBottomOf="@+id/etEpisodio" />

        <ImageView
            android:id="@+id/imgGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/genero"
            app:layout_constraintEnd_toStartOf="@+id/spGenero"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spGenero"
            tools:srcCompat="@drawable/ic_genero_24dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>